# example7

./: .gitignore  CMakeLists.txt  cpp_c.yml  helloworld.cpp  myfunctions.h  mytests.cpp  quadratic_equation.h
.github/workflows/: cmake-single-platform.yml
